--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,33 @@ opacity: 00;}
 .page_personal_centre .privacy .icon { margin-left: 20px; color: #236dd3; }
 #teamdesc { padding-top: 30px; margin-bottom: 30px; }
 
-
+.user-data{
+    margin-left: 76px;
+    height: 68px;
+    line-height: 68px;
+}
+.user-data .user-nickname{
+    font-size:12px;
+    font-family:MicrosoftYaHei;
+    font-weight:400;
+    color: #333333;
+}
+.index-header .user-data .user-nickname{
+    color: #ffffff;
+}
+.user-data .user-header{
+    background:#666666 no-repeat center center;
+    background-size: 100%;
+    margin-left: 6px;
+    width: 22px;
+    height: 22px;
+    margin-top: 24px;
+}
+.user-data .sign-out{
+    font-size: 14px;
+    color: #236DD3;
+    margin-left: 6px;
+    cursor: pointer;
+}
 
 
