--- a/css/custom-ui.css
+++ b/css/custom-ui.css
@@ -8,10 +8,10 @@
 /*各种按钮*/
 .btn_submit{ display:inline-block;*display:inline;*zoom:1;font-family:Verdana,Microsoft YaHei,"微软雅黑", SimSun,"宋体";font-size:14px;border-width:1px; border-style:solid; text-align:center; vertical-align:middle;}
 button.btn_submit,input.btn_submit{
--webkit-box-sizing: content-box; 
--moz-box-sizing: content-box;  
--ms-box-sizing: content-box; 
--o-box-sizing: content-box; 
+-webkit-box-sizing: content-box;
+-moz-box-sizing: content-box;
+-ms-box-sizing: content-box;
+-o-box-sizing: content-box;
 box-sizing: content-box; }
 .btn_small{ font-size:12px; height:25px; line-height:25px;}
 .btn_middle{ font-size:14px; height:38px;line-height:38px;}
@@ -98,6 +98,9 @@ box-sizing: content-box; }
 .btn_lensgreen_line:hover{background-color:#0195a3; color:#fff;}
 .btn_lensgreen_line:active{background-color:#005c65; color:#fff;}
 
+.btn_gray{border:1px #999999 solid;color:#fff;background-color:#999999;}
+.btn_gray:hover{background-color:#999999; color:#fff;}
+.btn_gray:active{background-color:#666666; color:#fff;}
 
 
 /*文字小标签***********************/
@@ -151,13 +154,13 @@ textarea.input_text{ box-sizing:border-box; width:100%; resize:vertical; min-hei
 .input_text:focus{
 	color:#333;
 	border-color:#236dd3;
-	/*-moz-box-shadow:0px 0px 5px rgba(255,255,255,0.5);              
-    -webkit-box-shadow:0px 0px 5px rgba(255,255,255,0.5);           
+	/*-moz-box-shadow:0px 0px 5px rgba(255,255,255,0.5);
+    -webkit-box-shadow:0px 0px 5px rgba(255,255,255,0.5);
     box-shadow:0px 0px 5px rgba(255,255,255,0.5);*/}
 input.Validform_error,textarea.Validform_error{
 	border:1px #e9322d solid !important;
-	/*-moz-box-shadow:0px 0px 10px rgba(255,0,0,0.5);              
-    -webkit-box-shadow:0px 0px 10px rgba(255,0,0,0.5);           
+	/*-moz-box-shadow:0px 0px 10px rgba(255,0,0,0.5);
+    -webkit-box-shadow:0px 0px 10px rgba(255,0,0,0.5);
     box-shadow:0px 0px 10px rgba(255,0,0,0.5);*/
 	color:#e9322d;}
 .input_text[disabled]{ background:#f8f8f8; color:#aaa;}
@@ -210,8 +213,8 @@ opacity: 0;
 .radio_box .radio_item{ display:block; height:38px; line-height:38px; border:1px #dbdbdb solid; color:#666;cursor:pointer; font-size:14px; background:#fff; overflow:hidden; white-space:nowrap;}
 .radio_box input.Validform_error+.radio_item{
 	border:1px #e9322d solid !important;
-	-moz-box-shadow:0px 0px 10px rgba(255,0,0,0.5);              
-    -webkit-box-shadow:0px 0px 10px rgba(255,0,0,0.5);           
+	-moz-box-shadow:0px 0px 10px rgba(255,0,0,0.5);
+    -webkit-box-shadow:0px 0px 10px rgba(255,0,0,0.5);
     box-shadow:0px 0px 10px rgba(255,0,0,0.5);}
 .radio_box .radio_item span{ padding:0 12px; white-space:nowrap;}
 .radio_box .radio_item img{width:38px; height:38px;filter: alpha(opacity=50);-khtml-opacity: 0.5;-moz-opacity: 0.5;opacity: 0.5;}
