--- a/css/style.css
+++ b/css/style.css
@@ -502,7 +502,7 @@ opacity: 00;}
 .radio_box .current .icon.female { background-position: -77px 0; }
 .selectbox{padding:5px 5px;height:34px;font-size:12px;color:#888;border:1px solid #cfcfcf;}
 .radio_box .current { color: #666; }
-#imgHeadPhoto_2,.page_editor .change_avatar .pic02 { width:100px; height:100px; }
+#imgHeadPhoto_2,.page_editor .change_avatar .pic02 { width:100px; height:100px; background: #cccccc; }
  .page_editor .change_avatar .pic02 a { left: 100px; }
 .page_editor .icheckbox_flat-red { background: url(../images/icon.png) no-repeat 0px 0; width: 18px; height:18px; background-size: cover; }
 .page_editor .icheckbox_flat-red.checked { background-position: -26px 0; }
@@ -524,7 +524,7 @@ opacity: 00;}
   height: 100%;
   cursor: pointer;
 }
-.upload_img_wrap { width: 562px; }
+.upload_img_wrap { width: 580px; }
 .upload_img_wrap .imgDelete{
     width: 22px;
     height: 22px;
@@ -633,4 +633,36 @@ opacity: 00;}
     line-height: 11px;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+#set_user_name{
+    display: none;
+    border: 1px solid #eeeeee;
+}
+.screenshot .screenshot-item{
+    width: 172px;
+    height: 88px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+.screenshot .screenshot-item .close-i{
+    background: url(../images/del_img.png) no-repeat center center;
+    background-size: 100% 100%;
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    display: none;
+}
+.screenshot-item img{
+    width: 100%;
+    height: 88px;
+}
+.screenshot .screenshot-item:hover .close-i{
+    display: block;
+}
+#tame-select-fabu{
+    display: none;
 }
